; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_movie.c_TestWrite.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_movie.c_TestWrite.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.MovieBufferStruct = type { i32, i32 }

@.str = private unnamed_addr constant [10 x i8] c"rmiab.txt\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"wb\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @TestWrite(i64 %0) #0 {
  %2 = alloca %struct.MovieBufferStruct, align 4
  %3 = alloca i32*, align 8
  %4 = bitcast %struct.MovieBufferStruct* %2 to i64*
  store i64 %0, i64* %4, align 4
  %5 = call i32* @fopen(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0))
  store i32* %5, i32** %3, align 8
  %6 = getelementptr inbounds %struct.MovieBufferStruct, %struct.MovieBufferStruct* %2, i32 0, i32 1
  %7 = load i32, i32* %6, align 4
  %8 = getelementptr inbounds %struct.MovieBufferStruct, %struct.MovieBufferStruct* %2, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 @fwrite(i32 %7, i32 1, i32 %9, i32* %10)
  %12 = load i32*, i32** %3, align 8
  %13 = call i32 @fclose(i32* %12)
  ret void
}

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @fwrite(i32, i32, i32, i32*) #1

declare dso_local i32 @fclose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
